# sample_site

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  go.nu
.github/workflows/: main.yml
.sqlx/: query-145594a60865f974c7c85de72f4b05f613f0a311ec1123ecb8a46add40abdd2d.json  query-c2a5ff97a195faf871deec51cc431fa713ce18fd95ab54119ee52b26e6ec5b3a.json
assets/css/: input.css  main.css
migrations/: 20240117013717_schema.sql  20240815225216_site_settings.sql  20240815235715_site.sql
src/: builder.rs  components.rs  copy.rs  main.rs  markup.rs  models.rs  nav.rs  page.rs  photos.rs
src/db/: mock.sql  schema.sql
