[package]
name = "sample_site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
clerk-rs = "0.2.1"
dotenv = "0.15.0"
http = "1.0.0"
markdown = "0.3.0"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlx-postgres", "postgres"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
