[package]
name = "sample_site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
clerk-rs = "0.2.3"
dotenv = "0.15.0"
http = "1.1.0"
markdown = "0.3.0"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.207", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "sqlx-postgres", "postgres"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
